# spellstone

./: .gitignore  .pre-commit-config.yaml  Dockerfile.neo4j  Makefile  README.md  drop_all.cypher  template.env
indexer/: Makefile  README.md  pyproject.toml  template.env
indexer/indexer/: cli.py
indexer/indexer/mdparse/: __init__.py  mdparse.py
indexer/indexer/neo4j/: __init__.py  config.py  neo4j.py
indexer/notebooks/: markdown.ipynb  neo4j.ipynb  obsidian.ipynb  openaifunction_constructing_graph.ipynb
notebooks/: obsidian.ipynb
o2n/: pyproject.toml
o2n/notebooks/: markdown.ipynb  neo4j_llama_multimodal.ipynb  openaifunction_constructing_graph.ipynb
o2n/o2n/: cli.py
o2n/o2n/mdparse/: __init__.py  mdparse.py
o2n/o2n/neo4j/: config.py  neo4j.py
o2n/o2n/obsidian/: __init__.py  obsidian.py
